k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: simple-bank.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-bank
                port:
                  number: 8080
